# Daily-Warm-Ups

./: .gitignore  Andrew_and_Dan_basics.ipynb  Copy_of_basics.ipynb  Copy_of_u2s1m2_regression2.ipynb  Git fundamentals (group exercise).md  LICENSE  Probabilities_and_Statistics_Warm_Up.ipynb  README.md  README.rst  Unit_2_Sprint_2_Tree_Ensembles_Study_Guide.ipynb  basics.ipynb  project  sprint 2
AndrewArnett /:  Daily-Warm-Ups
Daily-Warm-Ups/unit-2/sprint1/: Copy_of_u2s1m2_regression2.ipynb
Unit-1/: Copy_of_basics.ipynb  README.rst  basics.ipynb  pyproject.toml
Unit-1/notebooks/: Probabilities_and_Statistics_Warm_Up.ipynb  basics.ipynb
docs/: Git fundamentals (group exercise).md
notebooks/: Probabilities_and_Statistics_Warm_Up.ipynb
sprint2/: u2m2s3_cross_validation.ipynb
unit-1/notebooks/: Probabilities_and_Statistics_Warm_Up.ipynb  basics.ipynb
unit-2/: README.rst  Unit_2_Sprint_2_Tree_Ensembles_Study_Guide.ipynb  u2m2s3_cross_validation.ipynb  u2s1m2_regression2.ipynb  u2s1m3_Ridge_Regression.ipynb
unit-2/sprint-1/: Unit_2_Sprint_1_Linear_Models_Study_Guide.ipynb  u2s1m2_regression2.ipynb  u2s1m3_Ridge_Regression.ipynb
unit-2/sprint-2/: u2m2s3_cross_validation.ipynb
unit-2/sprint-3/: local-devel-env.rst
unit-2/sprint1/: Unit_2_Sprint_1_Linear_Models_Study_Guide.ipynb  u2s1m2_regression2.ipynb  u2s1m3_Ridge_Regression.ipynb
unit-2/sprint2/: Copy_of_Unit_2_Sprint_2_Tree_Ensembles_Study_Guide.ipynb  u2m2s3_cross_validation.ipynb
unit-3/sprint-1/: Effective-Troubleshooting.rst  OOP-and-Code-Review.rst
unit-3/sprint-2/: README.rst  pyproject.toml  requirements.txt
unit-3/sprint-2/requirements/: dev.txt  prod.txt
unit-3/sprint-2/sql_and_databases/: __init__.py  basic.py  dbHelper_experimentation.ipynb
unit-3/sprint-3/: MVC.rst
unit-4/sprint-1/: pyproject.toml  requirements.txt  text-preprocessing.ipynb
