[tool.poetry]
name = "unit-1"
version = "0.1.0"
description = ""
authors = ["BrianThomasRoss <ml@brianthomasross.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
pandas = "^1.0.4"
numpy = "^1.18.4"
matplotlib = "^3.2.1"
scikit-learn = "^0.23.1"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
