[tool.poetry]
name = "sprint-2"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "BSD-4-Clause"

[tool.poetry.dependencies]
python = "^3.6.9"
pandas = "^1.1.0"
psycopg2-binary = "^2.8.5"
pymongo = "^3.11.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
