[tool.poetry]
name = "sprint-1"
version = "0.1.0"
description = ""
authors = ["Brian Thomas Ross <ml@brianthomasross.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.9"
gensim = "^3.8.3"
pyLDAvis = "^2.1.2"
spacy = "^2.3.2"
scikit-learn = "^0.23.2"
seaborn = "^0.10.1"
squarify = "^0.4.3"
scipy = "^1.5.2"
pandas = "^1.1.1"
nltk = "^3.5"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.2.6"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
